[package]
name = "payments_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4"
clap = { version = "4.6.0", features = ["derive"] }
tracing = "0.1.44"
thiserror = "2.0.18"
eyre = "0.6.12"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.50.0", features = ["full", "tokio-macros"] }
hashbrown = "0.16.1"
tokio-util = "0.7.18"
futures = "0.3.32"

[dev-dependencies]
